--- a/AdminPanel/MainWindow.xaml
+++ b/AdminPanel/MainWindow.xaml
@@ -211,6 +211,25 @@
 
             </Grid>
         </TabItem>
+        <TabItem Header="Statistics">
+            <Grid>
+                <Border BorderBrush="Black" BorderThickness="4" HorizontalAlignment="Left" Height="455" Margin="10,10,0,0" VerticalAlignment="Top" Width="627">
+
+                    <Grid Margin="-1,1,1,-1">
+                        <ListView Name="ResultList" HorizontalAlignment="Left" Height="246" VerticalAlignment="Top" Width="305" SelectionChanged="SelectedQuestionOptionItem" Margin="0,10,0,0">
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn DisplayMemberBinding="{Binding E_mail}" Header="E_mail"/>
+                                    <GridViewColumn DisplayMemberBinding="{Binding Point}" Header="Point"/>
+
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
+                        <Button Content="Search" HorizontalAlignment="Left" Margin="10,274,0,0" VerticalAlignment="Top" Width="70" Height="20" FontSize="10" Click="SearchResult"/>
+                    </Grid>
+                </Border>
+            </Grid>
+        </TabItem>
     </TabControl>
 
 
